--- a/css/templete.css
+++ b/css/templete.css
@@ -1705,7 +1705,7 @@ content: "";
   }
   .filter-thumb-box .filter-item .title {
     display: block;
-    line-height: 20px;
+    line-height: 30px;
     color: #000;
   }
   .content-inner-2 {
@@ -2162,6 +2162,11 @@ content: "";
   }
   .team-box .team-info .name {
     font-size: 18px;
+    margin-bottom: 0px;
+    line-height: 24px;
+  }
+  .team-box .team-info .position {
+    font-size: 14px;
     margin-bottom: 0px;
     line-height: 24px;
   }
